fix gallery unsused spacing

--- a/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/global/global.sass
+++ b/sunnyside-agency-landing-page-main/sunnyside-agency-landing-page-main/css/global/global.sass
@@ -165,12 +165,26 @@ a
         text-align: center
         margin-bottom: 30px
 
+// 
 .section-gallery
+    position: relative
+    display: block
+    width: 100%
     display: flex
-    align-items: center
 
     .col.gallery-img-container 
         width: 25%
-
+        overflow: hidden
+    
         img 
             width: 100%
+            height: 100%
+
+        .desktop-gallery
+            display: block
+
+
+// footer
+.section-footer 
+    padding: 5vh 0
+    background: #90D4C5
